--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "vue3-draggable-resizable",
-  "version": "1.6.0",
+  "name": "vue3-draggable-resizable-v2",
+  "version": "0.0.1",
   "private": false,
   "description": "[Vue3 Component] 拖拽缩放并具有自动吸附对齐、参考线等功能",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "npm run build:lib && npm run build:dts",
+    "build": "tsc",
     "lint": "vue-cli-service lint",
-    "build:lib": "vue-cli-service build --target lib --name Vue3DraggableResizable src/index.ts",
-    "build:dts": "tsc src/index.ts --declaration --declarationDir typings"
+    "build:lib": "vue-cli-service build --target lib --name Vue3DraggableResizable src/index.ts"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -29,7 +28,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "typescript": "~4.3.5",
-    "vue": "^3.0.0"
+    "vue": "^3.2.47"
   },
   "license": "MIT",
   "repository": {
@@ -48,7 +47,16 @@
     "拖拽",
     "吸附对齐"
   ],
-  "main": "src/index.js",
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "require": "./src/index.js"
+    },
+    "./css": {
+      "import": "./src/components/index.css",
+      "require": "./src/components/index.css"
+    }
+  },
   "module": "src/index.js",
   "unpkg": "src/index.js",
   "typings": "typings/index.d.ts"
