--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue3-draggable-resizable-v2",
   "version": "0.0.1",
   "private": false,
-  "description": "[Vue3 Component] 拖拽缩放并具有自动吸附对齐、参考线等功能",
+  "description": "[Vue3 Component] 拖拽缩放并具有自动吸附对齐、参考线、缩放等功能",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "tsc",
