--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.1",
   "private": false,
   "description": "[Vue3 Component] 拖拽缩放并具有自动吸附对齐、参考线、缩放等功能",
+  "files": [
+    "dist",
+    "typings",
+    "README.md"
+  ],
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "tsc",
-    "lint": "vue-cli-service lint",
-    "build:lib": "vue-cli-service build --target lib --name Vue3DraggableResizable src/index.ts"
+    "build": "rimraf dist && node scripts/build.js",
+    "lint": "vue-cli-service lint"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -27,6 +31,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "~4.3.5",
     "vue": "^3.2.47"
   },
@@ -49,15 +54,15 @@
   ],
   "exports": {
     ".": {
-      "import": "./src/index.js",
-      "require": "./src/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
     "./css": {
-      "import": "./src/components/index.css",
-      "require": "./src/components/index.css"
+      "import": "./dist/components/index.css",
+      "require": "./dist/components/index.css"
     }
   },
-  "module": "src/index.js",
-  "unpkg": "src/index.js",
+  "module": "dist/index.js",
+  "unpkg": "dist/index.js",
   "typings": "typings/index.d.ts"
 }
